Tela Perfil - Upload Image 99%

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Rangoo</string>
+    <string name="_COM_RANGO_PREFERENCES">com.rangoo.user.session</string>
 </resources>
